1.14.7
======

Bug fixes:
- #7262 Fix backward compatibility for m1 and m2 builds.

Enhancements:
- #7254 Ability to bind synergy client to a network interface.

1.14.6
======

Bug fixes:
- #7208 Fix crash on FreeBSD when pressing special keys on a client.
- #7241 Change the default signature hashing algorithm for sha256.
- #7242 Fix tls certificate generation for flatpak.

Enhancements:
- #7222 Ability to initiate non-TLS connection from server
- #7225 Ability to initiate TLS connection from server
- #7239 Single app for server and client
- #7248 Firewall exception for client
- #7250 Add builds for Fedora 37 and 38

1.14.5
======

Bug fixes:
- #7182 Remove unused TLS options from the GUI on client
- #7186 There are no additional TLS options for all users setting

Enhancements:
- #7183 Refactoring for Synergy 3 licenses
- #7190 Maintenance license serial key support
- #7193 Support for maintenance licenses in China
- #7197 Special contributor mentions on the about screen
- #7203 License registration for Business edition

Github Actions:
- #7210 Update macos workflow to use macos-latest
- #7213 Update azure pipelines to use macos-latest

1.14.4
======

Bug fixes:
- #7144 Double lines when pasting text from Linux to Windows
- #7149 Address issues with modifiers and dead keys
- #7163 Fix compilation issues for FreeBSD
- #7172 Memory leaks in language sync and TLS functionality
- #7175 Memory leaks in copy/paste and drag and drop functionality
- #7179 Disable drag and drop by default

Enhancements:
- #7143 Ability to stop Synergy on the login screen
- #7157 Synergy Business accepts only business licenses
- #7188 Synergy Basic\Pro accepts business licenses
- #7166 Replace language notifications with warnings in logs
- #7181 Fedora 36 support to CI system

Github Actions:
- #7177 Create workflow for flatpak build support
- #7148 Fix unstable build for Windows core
- #7156 Change binary storage server
- #7161 Use brew bundle to install dependencies